# NativeCommunication

./: .gitignore  Android.mk  CMakeLists.txt  main.cpp  readme.sh  readme.txt
Binder/: ICallback.h  IDaemon.h
Daemon/: BnDaemon.cpp  BnDaemon.h  MyDaemon.cpp  MyDaemon.h
JNI/: Android.mk  MyJNI.cpp  MyJNI.h
part_a/: BnCallback.cpp  BpDaemon.cpp
part_a/include/: BnCallback.h  BpDaemon.h
part_b/: BnDaemon.cpp  BpCallback.cpp
part_b/include/: BnDaemon.h  BpCallback.h
